--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>mewtwo的博客</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="description" content="Description">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="//unpkg.com/docsify/themes/dark.css">
 </head>
 <body>
-    test
+  <div id="app"></div>
+  <script>
+      window.$docsify = {
+          search: 'auto', // 默认值
+
+          search : [
+              '/',            // => /README.md
+              '/guide',       // => /guide.md
+              '/get-started', // => /get-started.md
+              '/zh-cn/',      // => /zh-cn/README.md
+          ],
+
+          // 完整配置参数
+          search: {
+              maxAge: 86400000, // 过期时间，单位毫秒，默认一天
+              paths: [], // or 'auto'
+              placeholder: 'Type to search',
+
+              // 支持本地化
+              placeholder: {
+                  '/zh-cn/': '搜索',
+                  '/': 'Type to search'
+              },
+
+              noData: 'No Results!',
+
+              // 支持本地化
+              noData: {
+                  '/zh-cn/': '找不到结果',
+                  '/': 'No Results'
+              },
+
+              // 搜索标题的最大程级, 1 - 6
+              depth: 2
+          }
+      }
+  </script>
+  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
