--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app"></div>
   <script>
       window.$docsify = {
-          disqus: 'http-mewtwo-chi-com.'
+          disqus: 'http-mewtwo-chi-com'
       }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
